--- a/style.css
+++ b/style.css
@@ -12,3 +12,18 @@ li {
 .card-title {
     font-size: 20px;
 }
+
+img {
+    width: 100px;
+    height: 100px;
+}
+
+.fiveDayColor {
+    padding: 20px;
+    background-color: #1E90FF;
+    color: white;
+    float: left;
+    margin: 10px;
+    border: 1px solid lightgray;
+
+}
